test_regress/t/t_sys_readmem_bad_end.out
%Error: t/t_sys_readmem_bad_end.mem:11: $readmem file ended before specified final address (IEEE 2017 21.4)
Aborting...
